# Tick-Order-Structs

./: CHALLENGE.md  CMakeLists.txt
include/: Tick.hpp  order.hpp  strong_types.hpp  tick.hpp
include/core/: order.hpp  strong_types.hpp  tick.hpp
src/: order_driver.cpp  tick_driver.cpp
tests/: tick_order_test.cpp
